# yuyubot

./: Cargo.toml  README.md  build.rs
res/: index.html
res/pages/: about.js  bot.js  dashboard.js  logs.js  permissions.js  plugins.js  system.js
src/: error.rs  logger.rs  main.rs  runtime.rs  window.rs
src/plus/: manager.rs  mod.rs  plugin.rs
src/plus/manager/: config.rs  mod.rs  runtime.rs  storage.rs
src/server/: api.rs  milky_proxy.rs  mod.rs  permissions.rs
src/server/api/: bot.rs  plugins.rs  system.rs
src/server/api/bot/: config.rs  connection.rs  mod.rs  sse.rs  types.rs
src/server/api/plugins/: mod.rs  package.rs  routes.rs  stream.rs
