[package]
name = "yuyubot"
version = "0.1.0"
edition = "2021"

[dependencies]
tao = "0.34.5"
wry = "0.53.5"
http = "1.4.0"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "sync", "time"] }

urlencoding = "2.1"
url = "2.4"

expectrl = "0.8.0"
rust-embed = "8"

image = "0.24"
tray-icon = "0.21.2"


tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi"] }
chrono = "0.4"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3"
zip = "0.6"
rfd = "0.14"
walkdir = "2"

[build-dependencies]
winres = "0.1"


[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
